# closestmatch-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  index.html  search-index.js
closestmatch/: ClosestMatch.t.html  index.html  sidebar-items.js  struct.ClosestMatch.html
implementors/rand/: trait.SeedableRng.js
rayon/: fn.current_num_threads.html  fn.initialize.html  fn.join.html  fn.scope.html  fn.split.html  index.html  sidebar-items.js  struct.Configuration.html  struct.Scope.html  struct.ThreadPool.html
rayon/collections/: index.html
rayon/iter/: fn.split.html  index.html  struct.Chain.html  struct.Enumerate.html  struct.Filter.html  struct.FilterMap.html  struct.FlatMap.html  struct.Fold.html  struct.Map.html  struct.MapCloned.html  struct.MapFn.html  struct.MapInspect.html  struct.MaxLen.html  struct.MinLen.html  struct.Rev.html  struct.Skip.html  struct.Split.html  struct.Take.html  struct.Weight.html  struct.Zip.html  trait.BoundedParallelIterator.html  trait.ExactParallelIterator.html  trait.FromParallelIterator.html  trait.IndexedParallelIterator.html  trait.IntoParallelIterator.html  trait.IntoParallelRefIterator.html  trait.IntoParallelRefMutIterator.html  trait.MapOp.html  trait.ParallelIterator.html
rayon/option/: index.html  struct.IntoIter.html  struct.Iter.html  struct.IterMut.html
rayon/prelude/: index.html
rayon_core/: fn.current_num_threads.html  fn.initialize.html  fn.join.html  fn.scope.html  index.html  sidebar-items.js  struct.Configuration.html  struct.Scope.html  struct.ThreadPool.html
src/: lib.rs  lib.rs.bk
(+173 files in other folders)
